// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComposedBodyFromArray should match snapshot, empty body, auto text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "auto",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, center text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "center",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, default text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "center",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, justify text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "justify",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, left text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, right text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "right",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
/>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, auto text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "auto",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, center text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "center",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, default text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "center",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, justify text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "justify",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, left text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, right text align 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "textAlign": "right",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "700",
        },
      ]
    }
    weight="Bold"
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "300",
        },
      ]
    }
    weight="Light"
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "500",
        },
      ]
    }
    weight="Medium"
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    color="bluegrey"
    defaultColor="bluegrey"
    defaultWeight="Regular"
    font="TitilliumSansPro"
    fontStyle={
      {
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#475A6D",
          "fontFamily": "Titillium Sans Pro",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
  >
     weights
  </Text>
</Text>
`;
